# wasm-plugins

./: .gitignore  Cargo.toml  README.md  build-handlers.sh  wasi_snapshot_preview1.wasm
handlers/: README.md  hello-handler.wasm
hello-handler/: Cargo.toml
hello-handler/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
wit/: handler.wit
